2007-03-27  Vitaly Alexeev <tishka92@yahoo.com>
	
	* gameswf/gameswf_root.h: removed useless commented code
	* gameswf/gameswf_sprite.cpp: fixed get_topmost_mouse_enity() broken before
	* gameswf/gameswf_action.(cpp,h),
	* gameswf/gameswf.h: as_object() may have events()

2007-03-25  Vitaly Alexeev <tishka92@yahoo.com>
	
	* gameswf/gameswf_sound_handler.h: fixed memory leaks
	in ffmpeg sound mixer
	
2007-03-25  Vitaly Alexeev <tishka92@yahoo.com>
	
	* gameswf/gameswf_sound_handler.h: fixed bug

2007-03-25  Vitaly Alexeev <tishka92@yahoo.com>
	
	* base/utility.h: added assert() for SVN_RELEASE which
	will help users to send messages about bugs
	* base/postscipt.(cpp,h): removed from projects because it is't used

2007-03-24  Vitaly Alexeev <tishka92@yahoo.com>
	
	* gameswf/win32/VC7/gameswf.vcproj: added Visual Studio 2003 
	project file. Release will be done on VC7

2007-03-24  Vitaly Alexeev <tishka92@yahoo.com>
	
	* gameswf/gameswf_sound_handler.h: optimization & cleanup

2007-03-24  Vitaly Alexeev <tishka92@yahoo.com>
	
	* gameswf/gameswf_action.cpp: added \n in log_msg()
	* gameswf/gameswf_sound_handler.(cpp,h): fixed bug leading to
	infinite playing of sound
	* gameswf/gameswf_shape.cpp: there are problems with NEW TESSELATOR:
	therefore "#define USE_NEW_TESSELATOR" is commented
	* gameswf/gameswf_movie_def.cpp: removed ifdef USE_SEPARATE_THREAD
	

2007-03-22  Vitaly Alexeev <tishka92@yahoo.com>
	
	* gameswf/gameswf_movie_def.cpp: added ifdef USE_SEPARATE_THREAD,
	there is problem while loading movies in separate thread
	assert(vi2 != vi0) in line 982, file ear_clip_triangulate_impl.h;
	during displaying static text, new release will be put
	after fixing this problem

2007-03-22  Vitaly Alexeev <tishka92@yahoo.com>
	
	* gameswf/gameswf_sound_handler.(cpp,h): rewrited mixer,
	It is decoded only so much samples how much to be located in 
	the handler buffer (required for stream sound)

2007-03-20  Vitaly Alexeev <tishka92@yahoo.com>
	
	* a lot of files: 