@@ -1,5 +1,9 @@
 2007-03-27  Vitaly Alexeev <tishka92@yahoo.com>
 	
+	* gameswf/gameswf_spite.cpp: cleanup
+
+2007-03-27  Vitaly Alexeev <tishka92@yahoo.com>
+	
 	* gameswf/gameswf_root.h: removed useless commented code
 	* gameswf/gameswf_sprite.cpp: fixed get_topmost_mouse_enity() broken before
 	* gameswf/gameswf_action.(cpp,h),
